--- a/ejercisios.html
+++ b/ejercisios.html
@@ -19,10 +19,10 @@
         </div>
     </main>
     <article class="targeta">
-    <img class="imagenredonda" src="jojo.jpg" width="300px" height="300px" alt="">
-    <div class="arriba"></div>
+      <div class="arriba"></div>
+    <img class="imagenredonda" src="jojo.jpg" width="200px" height="200px" alt="">
     <h1>jotaro Kuyo 20</h1><h2>Demasia</h2>
-    <div class="abajo">80K 803K 1.4K <p> seguidores  me gustas <span>pentakills</span></p></div>
+    <div class="abajo">80K <span>     </span> 803K <span>    </span> 1.4K <p> seguidores  me gustas <span>pentakills</span></p></div>
   </article>
 
     <footer></footer>
